--- a/web/index-template.html
+++ b/web/index-template.html
@@ -35,6 +35,21 @@
       <!--img src="/img/spinner.gif" /-->
     </div>
     <script>
+      if (window.location != window.parent.location) {
+        let { referrer, URL } = document
+        if (referrer) {
+          let urlParts = decodeURIComponent(URL).split('&')
+          let qs = {}
+          urlParts.forEach(pair => {
+            let [key, value] = pair.split('=')
+            qs[key] = value
+          })
+          if (qs.img)
+            document.getElementById('splashscreen').style.background = `url(${qs.img}) center center / cover no-repeat fixed`;
+        }
+      }
+    </script>
+    <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
